defind json data step 2 create contract

--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -1,6 +1,6 @@
 <!--xử lý gọi các component trong các step theo từng điều kiện-->
 <div class="container-fluid">
-  <p (click)="t()">ducanh</p>
+<!--  <p (click)="t()">ducanh</p>-->
 <!--  <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (stepChange)="getStep()"></app-contract-header>-->
   <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"></app-contract-header>
   <ng-container>
