--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -2,32 +2,60 @@
   <div style="text-align: center; font-weight: bold">
     <h3 style="color: #106DB6; font-weight: bold">{{this.datas.title}}</h3>
   </div>
-  <form (ngSubmit)="onSubmit()" [formGroup]="myForm" class="content">
+  <div class="content">
     <div class="name-item">
       <div class="confirm-radio d-flex justify-content-between mx-4">
         <div class="radio-confirm">
-          <input id="radio-file-account" type="radio" name="confirm-radio-signature" [value]="1" [(ngModel)]='typeImageSignature'>
+          <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1" [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
           <label for="radio-file-account" class="ms-2">File chữ ký từ tài khoản</label>
         </div>
-        <div class="radio-refuse">
-          <input id="radio-file-com" type="radio" name='confirm-radio-signature' [value]="2" [(ngModel)]='typeImageSignature'>
+        <div class="radio-confirm">
+          <input id="radio-file-com" type="radio" name='choose-radio-signature' [value]="2" [(ngModel)]='typeImageSignatureRadio' (change)="t(2)">
           <label for="radio-file-com" class="ms-2">Tải file ảnh chữ ký</label>
         </div>
-        <div class="radio-refuse">
-          <input id="radio-img-draw" type="radio" name='confirm-radio-signature' [value]="3" [(ngModel)]='typeImageSignature'>
+        <div class="radio-confirm">
+          <input id="radio-img-draw" type="radio" name='choose-radio-signature' [value]="3" [(ngModel)]='typeImageSignatureRadio' (change)="t(3)">
           <label for="radio-img-draw" class="ms-2">Ký bằng hình vẽ tay</label>
         </div>
       </div>
     </div>
 
     <div class="image-sign" style="min-height: 50vh">
-      <div *ngIf="typeImageSignature == 1">
-        <!--<ngx-select [items]="optionsFileSignAccount" [placeholder]="'Chọn file ký đã upload'" [(ngModel)]="networkCompany" optionValueField="item_id" optionTextField="item_text"></ngx-select>-->
-      </div>
-      <div *ngIf="typeImageSignature == 2">
 
+      <div *ngIf="typeImageSignatureRadio == 1">
+        <label class="align-select">Chọn chữ ký đã tạo trên hệ thống:</label>
+        <div class="select-signature-acc align-select mt-2">
+          <ngx-select [items]="optionsFileSignAccount" [placeholder]="'Chọn file ký đã upload'"
+                      optionValueField="id" optionTextField="name"
+                      (selectionChanges)="chooseImageSignAcc($event)"
+
+          ></ngx-select>
+        </div>
+
+        <div class="image-sign-acc mt-4">
+          <img *ngIf="imgSignAccountSelect" [src]="imgSignAccountSelect" alt="">
+        </div>
       </div>
-      <div *ngIf="typeImageSignature == 3">
+      <div *ngIf="typeImageSignatureRadio == 2">
+        <div class="form-group">
+          <div class="select-file-contract">
+            <div class="file-approve">
+              <div class="label_item">File đính kèm</div>
+              <input id="attachFileSignature" type="file" accept=".jpg, .png, .jdeg"
+                     (change)="fileChangedAttach($event)" style="display: none;" multiple/>
+              <div class="select-contract" (click)="addFileAttach()">
+                <input type="text" placeholder="Chọn file đính kèm (JPG, PNG, JDEG)" readonly [ngModel]="datas.file_name_attach">
+                <img src="assets/img/attachment.svg" alt="mobifone.contract">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="image-sign-acc-2 mt-4">
+          <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 0 auto;">
+        </div>
+      </div>
+      <div>
+        <signature-pad *ngIf="typeImageSignatureRadio == 3" #signature [options]="signaturePadOptions" (drawStart)="drawStart($event)" (drawEnd)="drawComplete($event)"></signature-pad>
 
       </div>
     </div>
@@ -38,8 +66,8 @@
     <div class="select-option">
       <button
         class="dx-button-form dx-button-close dx-button-90"
-        type="button">Xác nhận
+        type="button" (click)="uploadImage()">Xác nhận
       </button>
     </div>
-  </form>
+  </div>
 </div>
